--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-    "recommendations": ["amodio.tsl-problem-matcher", "dbaeumer.vscode-eslint"]
+    "recommendations": [
+        "amodio.tsl-problem-matcher",
+        "dbaeumer.vscode-eslint",
+        "georgewfraser.vscode-javac"
+    ]
 }
